--- a/src/static/templates/ecommerce/includes/header.html
+++ b/src/static/templates/ecommerce/includes/header.html
@@ -1,8 +1,6 @@
 {% load static %} 
 {% include './nav.html' %}
 <div id="header_section_back">    
-    <div class="container text-center" style="padding-top: 15%;">
-        <h1 style="color: #ffffff; font-size: 46px;">{{seccion}}</h1>
-    </div>
+    <h1 class="cover-heading" style="color: #ffffff; font-size: 46px;align-self: center;">{{seccion}}</h1>
 </div>
 
