--- a/src/static/css/ecommerce/properties.css
+++ b/src/static/css/ecommerce/properties.css
@@ -1,3 +1,8 @@
+.form-control {
+    border-color: #486600 !important;
+    border-radius: 30px;
+    font-family: 'Avenir';
+}
 .prop-style h1, .prop-style p{
     margin-bottom: 0.4em;
 }
