--- a/src/static/templates/ecommerce/about-us.html
+++ b/src/static/templates/ecommerce/about-us.html
@@ -7,18 +7,32 @@
 
 <style>
     #header_section_back{
-        background-image: url("{% static 'img/banner-carro.png' %}");
-        background-position: bottom;
+        background: url("{% static 'img/img-20.png' %}") no-repeat center;
+        background-size: cover;
+        min-height: 100vh;
     }
+    .top-header {
+        color:#000 !important;
+    }
+    .btn-transparent{
+            border-color: #000000 !important;
+            border-radius: 0px !important;
+            padding: 5px !important;
+            color: #000000 !important;
+    }
+
+    .btn-transparent:hover{
+            background-color: #000000 !important;
+            color: #ffffff !important;
+    }  
 </style>
 
 {% endblock estilos-adicionales %}
-    
-
 {% block content %}
-{% include './includes/header.html' with seccion="NOSOTROS" %}
-
-<div id="about_use_section_back" style="margin-top: 4%;">
+<main class="inner cover">
+    {% include './includes/header.html' with seccion="NOSOTROS" %}
+</main>
+<div id="about_use_section_back" style="margin-top: 4%;">    
     <div>
 
         <!-- <section class="business-features">
@@ -51,49 +65,50 @@
             </article>
         </section> -->
 
-        <div align="center">
+        <div class="text-center">
             <div class="row container about-row" style="margin: 0em 0 1em 0;">
                 <div class="col-md-4">
-                    <img src="{% static 'ecommerce/img/ic-20.png' %}">
+                    <img class="img-fluid" src="{% static 'ecommerce/img/ic-20.png' %}">
                 </div>
                 <div class="col-md-4">
-                    <img src="{% static 'ecommerce/img/ic-21.png' %}">
+                    <img class="img-fluid" src="{% static 'ecommerce/img/ic-21.png' %}">
                 </div>
                 <div class="col-md-4">
-                    <img src="{% static 'ecommerce/img/ic-20.png' %}">
+                    <img class="img-fluid" src="{% static 'ecommerce/img/ic-20.png' %}">
                 </div>
             </div>
             <div class="container" style="margin-bottom: 0.5em;">
                 <p style="text-align: center; color: #707070; line-height: 25px; padding: 2em;;">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tincidunt odio nisi, vitae sagittis leo
-                    hendrerit eget. Cras pharetra volutpat vehicula. Nunc volutpat tincidunt nisi eget pretium. Sed id
-                    diam blandit, convallis orci feugiat, convallis orci. Quisque faucibus imperdiet enim id rutrum.
-                    Curabitur id neque et massa euismod tincidunt. Donec quis tellus neque. Vestibulum felis ligula, ornare iaculis
-                    dapibus ac, rutrum vitae sem. Maecenas maximus auctor sem, in finibus ligula tincidunt et.
-                    Nunc volutpat tincidunt nisi eget pretium. Sed id diam blandit, convallis orci feugiat, convallis orci.
+                    Quienes Somos: Una inmobiliaria formada por un gran equipo, con juventud y experiencia, buscando hacer cosas diferentes y siempre dispuestos a ofrecer el mejor servicio.
                 </p>
             </div>
             <div class="row container" align="center" style="margin-bottom: 5em;">
                 <div class="col-md-4 mision-vision">
                     <img src="{% static 'ecommerce/img/ic-mision.png' %}" width="100px">
                     <h1>MISIÓN</h1>
-                    <p style="text-align: center; color: #707070; line-height: 170%;">Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit. Cras tincidunt odio nisi, vitae sagittis leo hendrerit eget. Cras
-                        pharetra volutpat vehicula. Nunc volutpat tincidunt nisi eget pretium.</p>
+                    <p style="color: #707070;">
+                        Satisfacer las necesidades de nuestros en clientes, ayudándoles a encontrar el mejor inmueble, brindándoles en todo momento un servicio de excelencia. </p>
                 </div>
                 <div class="col-md-4 mision-vision">
                     <img src="{% static 'ecommerce/img/ic-mision.png' %}" width="100px">
                     <h1>VISIÓN</h1>
-                    <p style="text-align: center; color: #707070; line-height: 170%;">Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit. Cras tincidunt odio nisi, vitae sagittis leo hendrerit eget. Cras
-                        pharetra volutpat vehicula. Nunc volutpat tincidunt nisi eget pretium.</p>
+                    <p style="color: #707070;">
+                        Ser la mejor opción de la región, contando tanto con el mejor equipo de asesores como las mejores propiedades del mercado.</p>
                 </div>
                 <div class="col-md-4 mision-vision">
                     <img src="{% static 'ecommerce/img/ic-mision.png' %}" width="100px">
                     <h1>VALORES</h1>
-                    <p style="text-align: center; color: #707070; line-height: 170%;">Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit. Cras tincidunt odio nisi, vitae sagittis leo hendrerit eget. Cras
-                        pharetra volutpat vehicula. Nunc volutpat tincidunt nisi eget pretium.</p>
+                    <p style="color: #707070;">
+                        •	Ética
+                        •	Trabajo en Equipo
+                        •	Constancia
+                        •	Disciplina
+                        •	Profesionalismo
+                        •	Pasión
+                        •	Innovación
+                        •	Compromiso
+                        •	Resultados
+                    </p>
                 </div>
             </div>
 
