--- a/src/static/templates/ecommerce/desarrollos.html
+++ b/src/static/templates/ecommerce/desarrollos.html
@@ -7,8 +7,9 @@
 
 <style>
     #header_section_back{
-        background-image: url("{% static 'img/banner-carro.png' %}");
-        background-position: bottom;
+        background: url("{% static 'img/img-21.png' %}") no-repeat center;
+        background-size: cover;
+        min-height: 100vh;
     }
 
     .img-desarrollo{
@@ -18,6 +19,21 @@
     .desarrollo-link:hover{
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
+
+    .top-header {
+        color:#000 !important;
+    }
+    .btn-transparent{
+            border-color: #000000 !important;
+            border-radius: 0px !important;
+            padding: 5px !important;
+            color: #000000 !important;
+    }
+
+    .btn-transparent:hover{
+            background-color: #000000 !important;
+            color: #ffffff !important;
+    } 
 
 
 </style>
@@ -30,51 +46,52 @@
 
 <div id="desarrollos" style="margin: 7%;">
     <div class="row">
-        <div class="col-md-6 d-flex align-items-center">
+        <div class="col ">
             <a href="{% url  'ecommerce:desarrollos-punta'  %}" class="desarrollo-link">
-                <img  class="img-desarrollo" style="width: 80%;" src="{% static 'img/ecommerce/desarrollos-12.png' %}">
+                <img  class="img-fluid" src="{% static 'img/img-13.png' %}">
             </a>
         </div>
-        <div class="col-md-6 d-flex align-items-center">
+        <div class="col mb-3 ">
             <a href="{% url  'ecommerce:desarrollos-ambar'  %}" class="desarrollo-link">
-                <img class="img-desarrollo" style="width: 80%;" src="{% static 'img/ecommerce/desarrollos-13.png' %}">
+                <img class="img-fluid" src="{% static 'img/img-18.png' %}">
             </a>
         </div>
-        <div class="col-md-6 d-flex align-items-center">
+    </div>
+    <div class="row">
+        <div class="col mb-3 ">
             <a href="{% url  'ecommerce:desarrollos-hexus'  %}" class="desarrollo-link">
-                <img class="img-desarrollo" style="width: 80%;" src="{% static 'img/ecommerce/desarrollos-14.png' %}">
+                <img class="img-fluid" src="{% static 'img/img-16.png' %}">
             </a>
         </div>
-        <div class="col-md-6 d-flex align-items-center">
+        <div class="col mb-3 ">
             <a href="{% url  'ecommerce:desarrollos-buenaventura'  %}" class="desarrollo-link">
-                <img class="img-desarrollo" style="width: 80%;" src="{% static 'img/ecommerce/desarrollos-15.png' %}">
+                <img class="img-fluid" src="{% static 'img/img-17.png' %}">
             </a>
         </div>
-        <div class="col-md-6 d-flex align-items-center">
+    </div>
+    <div class="row">
+        <div class="col mb-3 ">
             <a href="{% url  'ecommerce:desarrollos-upday'  %}" class="desarrollo-link">
-                <img class="img-desarrollo" style="width: 80%;" src="{% static 'img/ecommerce/desarrollos-16.png' %}">
+                <img class="img-fluid" src="{% static 'img/img-12.png' %}">
             </a>
         </div>
-        <div class="col-md-6 d-flex align-items-center">
+        <div class="col mb-3 ">
             <a href="{% url  'ecommerce:desarrollos-kinobay'  %}" class="desarrollo-link">
-                <img class="img-desarrollo" style="width: 80%;" src="{% static 'img/ecommerce/desarrollos-17.png' %}">
+                <img class="img-fluid" src="{% static 'img/img-15.png' %}">
             </a>
         </div>
-        <div class="col-md-6 d-flex align-items-center">
+    </div>
+    <div class="row">
+        <div class="col mb-3 ">
             <a href="{% url  'ecommerce:desarrollos-playas'  %}" class="desarrollo-link">
-                <img class="img-desarrollo" style="width: 80%;" src="{% static 'img/ecommerce/desarrollos-18.png' %}">
+                <img class="img-fluid" src="{% static 'img/img-14.png' %}">
             </a>
         </div>
-        <div class="col-md-6 d-flex align-items-center">
+        <div class="col mb-3 ">
             <a href="{% url  'ecommerce:desarrollos-rancho'  %}" class="desarrollo-link">
-                <img class="img-desarrollo" style="width: 80%;" src="{% static 'img/ecommerce/desarrollos-19.png' %}">
+                <img class="img-fluid" src="{% static 'img/img-19.png' %}">
             </a>
         </div>
     </div>
 </div>
-
-<div>
-    <img src="{% static 'ecommerce/img/banner-redes.png' %}">
-</div>
-
 {% endblock content %}
